5 Application Configuration/api-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-service
  labels:
    name: api-service
